# hiv

./: .gitignore  LICENSE  README.md  conftest.py  dodo.py  generate_data.py  inference.md  pyproject.toml  recipe.py  requirements.in  requirements.txt  setup.cfg  setup.py
data/: hansson2019.yaml  likoma.json  likoma.md  weiss2020.yaml  xiridou2003.yaml
hiv/: algorithm.py  km.py  simulator.py  stockholm.py  util.py
notebooks/: illustration.md  inference.md  parameter-normalization.md  regression-adjustment.md  theory.md  thermodynamic-limit.md  validation.md
references/: Makefile  README.md  anderson2021potential.yaml  beck2015datadriven.yaml  betti2023mpox.yaml  camacho2019control.yaml  chen2008gap.yaml  delva2016connecting.yaml  dietz1988models.yaml  enns2011inferring.yaml  ferguson2000realistic.yaml  garnett1996std.yaml  garnett1999nj.yaml  gurski2023dynamic.yaml  gurski2025partnership.yaml  gutowska2022prep.yaml  hadeler2012pairformation.yaml  hansson2019stockholm.yaml  hansson2020prep.yaml  heijne2013reproduction.yaml  hvid2025mpox.yaml  inaba2017pairformation.yaml  kretzschmar1994twotypes.yaml  kretzschmar1996concurrency.yaml  kretzschmar1996stochastic.yaml  kretzschmar1998pairformation.yaml  kretzschmar1998recovery.yaml  kretzschmar2001comparative.yaml  kretzschmar2017primer.yaml  leng2018concurrency.yaml  leung2012concurrent.yaml  leung2015dynamic.yaml  luo1992limit.yaml  mattie2025review.yaml  mei2010amsterdam.yaml  miller2012edge.yaml  morris1995concurrent.yaml  morris2000uganda.yaml  muller2010hpv.yaml  nelson2010seattlesurvey.yaml  (+15 more)
tests/: test_km.py  (+6 more)
(+20 files in other folders)
