[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hiv"
version = "0.1.0"
description = "Longitudinal inference for sexual contact networks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "collectiontools>=0.2.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "cook-build>=0.5.1",
    "jupyter>=1.1.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]
